# pisi-timedate

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  configure  configure.ac  org.freedesktop.timedate1.service.in  pisi-timedate.c  pisi-timedate.h
